fix: address code review findings (security, perf, quality)
- Add debug log on JWT validation failure in JwtAuthenticationFilter
- Add insertBatch to SysRoleMenuMapper and use it in RoleService.updateMenus
- Extract menu type magic strings to MenuType constants
- Unify Stream.toList() usage in UserService
- Add @Transactional to UserService.resetPassword

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>